--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.axonivy.connector.salesforce</groupId>
   <name>salesforce-connector</name>
   <artifactId>salesforce-connector-modules</artifactId>
-  <version>10.0.12-SNAPSHOT</version>
+  <version>10.0.12</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -15,7 +15,7 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/axonivy-market/${project.name}.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v10.0.12</tag>
   </scm>
 
   <build>
