--- a/salesforce-connector-product/pom.xml
+++ b/salesforce-connector-product/pom.xml
@@ -2,6 +2,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.salesforce</groupId>
   <artifactId>salesforce-product</artifactId>
-  <version>10.0.12-SNAPSHOT</version>
+  <version>10.0.12</version>
   <packaging>pom</packaging>
 </project>
