--- a/salesforce-connector-demo/pom.xml
+++ b/salesforce-connector-demo/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.salesforce</groupId>
   <artifactId>salesforce-connector-demo</artifactId>
-  <version>10.0.12</version>
+  <version>10.0.13-SNAPSHOT</version>
   <packaging>iar</packaging>
   <dependencies>
     <dependency>
