--- a/salesforce-connector-product/pom.xml
+++ b/salesforce-connector-product/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.salesforce</groupId>
   <artifactId>salesforce-connector-product</artifactId>
-  <version>10.0.12</version>
+  <version>10.0.13-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
