--- a/salesforce-connector-test/pom.xml
+++ b/salesforce-connector-test/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.salesforce</groupId>
   <artifactId>salesforce-connector-test</artifactId>
-  <version>10.0.17</version>
+  <version>10.0.18-SNAPSHOT</version>
   <packaging>iar-integration-test</packaging>
   <properties>
     <project.build.plugin.version>10.0.16</project.build.plugin.version>
