--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,5 @@ on:
 jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/ci.yml@v6
+    secrets:
+      mvnArgs: -Dsalesforce.url=${{secrets.URL}} -Dsalesforce.subdomain=${{secrets.SUB_DOMAIN}} -Dsalesforce.clientid=${{secrets.CLIENT_ID}} -Dsalesforce.clientsecret=${{secrets.CLIENT_SECRET}}	
