--- a/salesforce-connector/config/variables.yaml
+++ b/salesforce-connector/config/variables.yaml
@@ -8,7 +8,7 @@
 #
 Variables:
 #  myVariable: value
-  salesforce-connector:
+  salesforceConnector:
       auth:
         # Url to the Salesforce user application
         url: ''
