Add E2E workflow and test environment support
Introduces a new GitHub Actions workflow for end-to-end (E2E) testing and adds support for a test environment property in the Maven test configuration. Updates test constants and context provider logic to handle E2E test execution, and simplifies secrets usage in CI and dev workflows.

--- a/salesforce-connector-test/pom.xml
+++ b/salesforce-connector-test/pom.xml
@@ -78,6 +78,7 @@
             <subdomain>${salesforce.subdomain}</subdomain>
             <clientid>${salesforce.clientid}</clientid>
             <clientsecret>${salesforce.clientsecret}</clientsecret>
+            <testEnvironment>${testEnvironment}</testEnvironment>
           </systemPropertyVariables>
           <statelessTestsetReporter
             implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
