--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -6,8 +6,10 @@ on:
     - cron:  '21 21 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  checks: write
+
 jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/dev.yml@v6
-    secrets:
-      mvnArgs: -Dsalesforce.url=${{secrets.URL}} -Dsalesforce.subdomain=${{secrets.SUB_DOMAIN}} -Dsalesforce.clientid=${{secrets.CLIENT_ID}} -Dsalesforce.clientsecret=${{secrets.CLIENT_SECRET}}	
