--- a/salesforce-connector/config/rest-clients.yaml
+++ b/salesforce-connector/config/rest-clients.yaml
@@ -6,7 +6,7 @@ RestClients:
     Icon: res:/webContent/icons/Salesforce-logo.jpg
     Features:
     - ch.ivyteam.ivy.rest.client.mapper.JsonFeature
-    - com.axonivy.connector.salesforce.oauth2.OAuth2FeatureNew
+    - com.axonivy.connector.salesforce.oauth2.OAuth2Feature
     Properties:
       AUTH.baseUri: https://${ivy.var.salesforce-connector.auth.subdomain}.my.salesforce.com/services/oauth2
       AUTH.appId: ${ivy.var.salesforce-connector.auth.clientId}
